src/log/build_2023-11-05_02-48-23/camera_node/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/cannotflypig/robokonn/src/install/camera_node/lib/python3.10/site-packages/camera_node/camera_node.py", line 27
    def readCameraValue
                       ^
SyntaxError: invalid syntax

